--- a/docs/src/views/mixins/cell.coffee.html
+++ b/docs/src/views/mixins/cell.coffee.html
@@ -49,7 +49,7 @@
     <span class="nv">mixinitialize: </span><span class="nf">-&gt;</span>
       <span class="nv">attribute = </span><span class="nx">@data</span><span class="p">(</span><span class="s">&#39;column&#39;</span><span class="p">).</span><span class="nx">get</span> <span class="s">&#39;attribute&#39;</span>
       <span class="nx">@addClass</span> <span class="s">&#39;cell&#39;</span>
-      <span class="nx">@addClass</span> <span class="s">&#39;cell-mixin&#39;</span>
+      <span class="nx">@addClass</span> <span class="s">&#39;cell-template-mixin&#39;</span>
       <span class="nx">@addClass</span> <span class="s">&quot;</span><span class="si">#{</span><span class="nx">attribute</span><span class="si">}</span><span class="s">-cell&quot;</span><span class="p">.</span><span class="nx">replace</span> <span class="sr">/[\.\s]/</span><span class="p">,</span> <span class="s">&#39;-&#39;</span>
 
   <span class="p">},</span> <span class="nv">mixins: </span><span class="p">[</span>
