--- a/docs/src/views/mixins/hideable-cell.coffee.html
+++ b/docs/src/views/mixins/hideable-cell.coffee.html
@@ -45,7 +45,7 @@
   <span class="nx">Oraculum</span><span class="p">.</span><span class="nx">defineMixin</span> <span class="s">&#39;Hideable.CellTemplateMixin&#39;</span><span class="p">,</span>
 
     <span class="nv">mixinitialize: </span><span class="nf">-&gt;</span>
-      <span class="nx">@addClass</span> <span class="s">&#39;hideable-cell-mixin&#39;</span>
+      <span class="nx">@addClass</span> <span class="s">&#39;hideable-cell-template-mixin&#39;</span>
       <span class="nx">@toggle</span> <span class="o">not</span> <span class="nx">@data</span><span class="p">(</span><span class="s">&#39;column&#39;</span><span class="p">).</span><span class="nx">get</span> <span class="s">&#39;hidden&#39;</span>
 </pre></div>
         </td>
