--- a/docs/src/views/mixins/sortable-cell.coffee.html
+++ b/docs/src/views/mixins/sortable-cell.coffee.html
@@ -45,7 +45,7 @@
   <span class="nx">Oraculum</span><span class="p">.</span><span class="nx">defineMixin</span> <span class="s">&#39;Sortable.CellTemplateMixin&#39;</span><span class="p">,</span>
 
     <span class="nv">mixinitialize: </span><span class="nf">-&gt;</span>
-      <span class="nx">@addClass</span> <span class="s">&#39;sortable-cell-mixin&#39;</span>
+      <span class="nx">@addClass</span> <span class="s">&#39;sortable-cell-template-mixin&#39;</span>
       <span class="nx">@_updateSortableClass</span><span class="p">()</span>
       <span class="nx">@_updateDirectionClass</span><span class="p">()</span>
 
