--- a/docs/src/views/mixins/fast-row.coffee.html
+++ b/docs/src/views/mixins/fast-row.coffee.html
@@ -52,10 +52,10 @@
       <span class="nv">staticClasses: </span><span class="p">[</span><span class="s">&#39;fast-row-mixin&#39;</span><span class="p">]</span>
 
     <span class="nv">mixinitialize: </span><span class="nf">-&gt;</span>
-      <span class="nv">debouncedRender = </span><span class="nx">_</span><span class="p">.</span><span class="nx">debounce</span> <span class="p">(</span><span class="o">=&gt;</span> <span class="nx">@render</span><span class="p">()),</span> <span class="mi">100</span>
+      <span class="nv">debouncedRender = </span><span class="nx">_</span><span class="p">.</span><span class="nx">debounce</span> <span class="o">=&gt;</span> <span class="nx">@render</span><span class="p">()</span>
       <span class="nx">@listenTo</span> <span class="nx">@model</span><span class="p">,</span> <span class="s">&#39;all&#39;</span><span class="p">,</span> <span class="nx">debouncedRender</span>
       <span class="nx">@listenTo</span> <span class="nx">@collection</span><span class="p">,</span> <span class="s">&#39;change&#39;</span><span class="p">,</span> <span class="nx">debouncedRender</span>
-      <span class="nx">@listenTo</span> <span class="nx">@collection</span><span class="p">,</span> <span class="s">&#39;add remove reset sort&#39;</span><span class="p">,</span> <span class="nx">@render</span>
+      <span class="nx">@listenTo</span> <span class="nx">@collection</span><span class="p">,</span> <span class="s">&#39;add remove reset sort&#39;</span><span class="p">,</span> <span class="o">=&gt;</span> <span class="nx">@render</span><span class="p">()</span>
 
     <span class="nv">render: </span><span class="nf">-&gt;</span>
       <span class="nx">@$el</span><span class="p">.</span><span class="nx">empty</span><span class="p">()</span>
