Hideable.CellTemplateMixin should not use jquery's `toggle`

--- a/docs/src/views/mixins/hideable-cell.coffee.html
+++ b/docs/src/views/mixins/hideable-cell.coffee.html
@@ -46,7 +46,9 @@
 
     <span class="nv">mixinitialize: </span><span class="nf">-&gt;</span>
       <span class="nx">@addClass</span> <span class="s">&#39;hideable-cell-template-mixin&#39;</span>
-      <span class="nx">@toggle</span> <span class="o">not</span> <span class="nx">@data</span><span class="p">(</span><span class="s">&#39;column&#39;</span><span class="p">).</span><span class="nx">get</span> <span class="s">&#39;hidden&#39;</span>
+      <span class="nv">hidden = </span><span class="nx">@data</span><span class="p">(</span><span class="s">&#39;column&#39;</span><span class="p">).</span><span class="nx">get</span> <span class="s">&#39;hidden&#39;</span>
+      <span class="nv">display = </span><span class="k">if</span> <span class="nb">Boolean</span> <span class="nx">hidden</span> <span class="k">then</span> <span class="s">&#39;none&#39;</span> <span class="k">else</span> <span class="s">&#39;&#39;</span>
+      <span class="nx">@css</span> <span class="p">{</span><span class="nx">display</span><span class="p">}</span>
 </pre></div>
         </td>
       </tr>
