--- a/docs/src/views/mixins/fast-row.coffee.html
+++ b/docs/src/views/mixins/fast-row.coffee.html
@@ -57,7 +57,6 @@
   <span class="nx">Oraculum</span><span class="p">.</span><span class="nx">defineMixin</span> <span class="s">&#39;FastRow.ViewMixin&#39;</span><span class="p">,</span> <span class="p">{</span>
 
     <span class="nv">mixinOptions:</span>
-      <span class="nv">staticClasses: </span><span class="p">[</span><span class="s">&#39;fast-row-mixin&#39;</span><span class="p">]</span>
       <span class="nv">list: </span><span class="p">{</span> <span class="nx">defaultTemplate</span> <span class="p">}</span>
 
     <span class="nv">mixconfig: </span><span class="nf">({list}, {defaultTemplate} = {}) -&gt;</span>
@@ -73,26 +72,51 @@
       <span class="nv">$template = </span><span class="nx">$</span><span class="p">(</span><span class="nx">template</span><span class="p">)</span>
 
       <span class="nv">view = </span><span class="p">{</span>
+
+</pre></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="docs">
+<div class="pilwrap">
+  <a class="pilcrow" href="#section-2" id="section-2">&#182;</a>
+</div>
+<p>Cell.ViewMixin interface</p>
+        </td>
+        <td class="code highlight"><div class="highlight"><pre>
         <span class="nx">model</span><span class="p">,</span> <span class="nx">column</span><span class="p">,</span>
+
+</pre></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="docs">
+<div class="pilwrap">
+  <a class="pilcrow" href="#section-3" id="section-3">&#182;</a>
+</div>
+<p>Minimal Backbone.View interface</p>
+        </td>
+        <td class="code highlight"><div class="highlight"><pre>
         <span class="nv">el: </span><span class="nx">$template</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
         <span class="nv">$el: </span><span class="nx">$template</span>
-        <span class="nv">render: </span><span class="nf">-&gt;</span> <span class="nx">view</span>
+        <span class="nv">render: </span><span class="nf">-&gt;</span> <span class="k">this</span>
       <span class="p">}</span>
 
-      <span class="nv">viewOptions = </span><span class="nx">@mixinOptions</span><span class="p">.</span><span class="nx">list</span><span class="p">.</span><span class="nx">viewOptions</span>
-      <span class="nv">viewOptions = </span><span class="nx">_</span><span class="p">.</span><span class="nx">extend</span> <span class="p">{</span><span class="nx">model</span><span class="p">,</span> <span class="nx">column</span><span class="p">},</span> <span class="nx">viewOptions</span>
+      <span class="nv">factory = </span><span class="nx">@__factory</span><span class="p">()</span>
+      <span class="nv">options = </span><span class="nx">@mixinOptions</span><span class="p">.</span><span class="nx">list</span><span class="p">.</span><span class="nx">viewOptions</span>
+      <span class="nv">options = </span><span class="nx">factory</span><span class="p">.</span><span class="nx">composeConfig</span> <span class="nx">options</span><span class="p">,</span> <span class="p">{</span><span class="nx">model</span><span class="p">,</span> <span class="nx">column</span><span class="p">}</span>
+      <span class="nv">options = </span><span class="nx">options</span><span class="p">.</span><span class="nx">call</span> <span class="k">this</span><span class="p">,</span> <span class="p">{</span><span class="nx">model</span><span class="p">,</span> <span class="nx">column</span><span class="p">}</span> <span class="k">if</span> <span class="nx">_</span><span class="p">.</span><span class="nx">isFunction</span> <span class="nx">options</span>
 
       <span class="nv">templateMixins = </span><span class="nx">_</span><span class="p">.</span><span class="nx">chain</span><span class="p">([</span><span class="s">&#39;Evented.Mixin&#39;</span><span class="p">])</span>
-        <span class="p">.</span><span class="nx">union</span><span class="p">(</span><span class="nx">column</span><span class="p">.</span><span class="nx">get</span> <span class="s">&#39;templateMixins&#39;</span><span class="p">)</span>
-        <span class="p">.</span><span class="nx">compact</span><span class="p">().</span><span class="nx">uniq</span><span class="p">().</span><span class="nx">value</span><span class="p">()</span>
-      <span class="nx">@__factory</span><span class="p">().</span><span class="nx">handleMixins</span> <span class="nx">view</span><span class="p">,</span> <span class="nx">templateMixins</span><span class="p">,</span> <span class="p">[</span><span class="nx">viewOptions</span><span class="p">]</span>
+        <span class="p">.</span><span class="nx">union</span><span class="p">(</span><span class="nx">column</span><span class="p">.</span><span class="nx">get</span> <span class="s">&#39;templateMixins&#39;</span><span class="p">).</span><span class="nx">compact</span><span class="p">().</span><span class="nx">uniq</span><span class="p">().</span><span class="nx">value</span><span class="p">()</span>
+
+      <span class="nv">mixins = </span><span class="nx">factory</span><span class="p">.</span><span class="nx">composeMixinDependencies</span> <span class="nx">templateMixins</span>
+      <span class="nx">factory</span><span class="p">.</span><span class="nx">enhanceObject</span> <span class="nx">factory</span><span class="p">,</span> <span class="s">&#39;Oraculum-fastTable.Template&#39;</span><span class="p">,</span> <span class="p">{</span><span class="nx">mixins</span><span class="p">},</span> <span class="nx">view</span>
+      <span class="nx">factory</span><span class="p">.</span><span class="nx">handleMixins</span> <span class="nx">view</span><span class="p">,</span> <span class="nx">mixins</span><span class="p">,</span> <span class="p">[</span><span class="nx">options</span><span class="p">]</span>
 
       <span class="k">return</span> <span class="nx">view</span>
 
-  <span class="p">},</span> <span class="nv">mixins: </span><span class="p">[</span>
-    <span class="s">&#39;List.ViewMixin&#39;</span>
-    <span class="s">&#39;StaticClasses.ViewMixin&#39;</span>
-  <span class="p">]</span>
+  <span class="p">},</span> <span class="nv">mixins: </span><span class="p">[</span><span class="s">&#39;List.ViewMixin&#39;</span><span class="p">]</span>
 </pre></div>
         </td>
       </tr>
